AxoTextList docu added

--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoTextList/AxoTextListExample.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoTextList/AxoTextListExample.razor
@@ -17,15 +17,17 @@
                 <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._set2zeroTask" Presentation="Command" />
             </div>
         </div>
+//<UI>
         <div class="col">
-            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList1" Presentation="Command" />
+            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList1" />
         </div>
         <div class="col">
-            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList2" Presentation="Command" />
+            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList2" />
         </div>
         <div class="col">
-            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList3" Presentation="Command" />
+            <RenderableContentControl Context="@Entry.Plc.AxoTextListExampleContext._myTextList3" />
         </div>
+//</UI>
     </div>
 </div>
 
