--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeBaseCommandView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeBaseCommandView.razor
@@ -2,14 +2,16 @@
 
 
 @using AXSharp.Connector
+@using Microsoft.AspNetCore.Components.Authorization;
 @inherits RenderableComplexComponentBase<AxoDataExchangeBase>;
 @inject IAlertDialogService _alertDialogService
+@inject AuthenticationStateProvider _asp
 
 <DataExchangeView Vm="_vm" Presentation="Command"></DataExchangeView>
 
 @code
 {
-    private DataExchangeViewModel _vm => new DataExchangeViewModel { Model = this.Component, AlertDialogService = _alertDialogService };
+    private DataExchangeViewModel _vm => new DataExchangeViewModel { Model = this.Component, AlertDialogService = _alertDialogService, Asp = _asp };
 
     public override void AddToPolling(ITwinElement element, int pollingInterval = 250)
     {
