refactoring, added terminate with step

--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/AxoAnalogueInspectorCommandView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoAnalogueInspector/AxoAnalogueInspectorCommandView.razor
@@ -23,7 +23,7 @@
                 <RenderableContentControl Context="@Component._data.IsByPassed" Presentation="Control" />
             </div>
             <div class="col-auto">
-                <RenderableContentControl Context="@Component._data.isExcluded" Presentation="Control" />
+                <RenderableContentControl Context="@Component._data.IsExcluded" Presentation="Control" />
             </div>
             <div class="col-auto">
                 <GenericIconView Result="@Component._data.Result.Cyclic" />
