--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoDigitalInspector/AxoDigitalInspectorStatusView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoDigitalInspector/AxoDigitalInspectorStatusView.razor
@@ -11,16 +11,16 @@
         </div>
         <div class="accordion-body row align-items-center py-1">
             <div class="col-auto">
-                <RenderableContentControl Context="@Component._data.RequiredStatus" Presentation="Control" />
+                <RenderableContentControl Context="@Component._data.RequiredStatus" Presentation="Display" />
             </div>
             <div class="col-auto">
-                <RenderableContentControl Context="@Component._data.DetectedStatus" Presentation="Control" />
+                <RenderableContentControl Context="@Component._data.DetectedStatus" Presentation="Display" />
             </div>
             <div class="col-auto ms-auto">
-                <RenderableContentControl Context="@Component._data.IsByPassed" Presentation="Control" />
+                <RenderableContentControl Context="@Component._data.IsByPassed" Presentation="Display" />
             </div>
             <div class="col-auto">
-                <RenderableContentControl Context="@Component._data.IsExcluded" Presentation="Control" />
+                <RenderableContentControl Context="@Component._data.IsExcluded" Presentation="Display" />
             </div>
             <div class="col-auto">
                 <GenericIconView Result="@Component._data.Result.Cyclic" />
