--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoInspectorDialog/AxoInspectorDialogDialogView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoInspectorDialog/AxoInspectorDialogDialogView.razor
@@ -14,7 +14,7 @@
             <h5>@Description</h5>
             @if (Inspector != null)
             {
-                <RenderableContentControl Context="Inspector" Presentation="Command" />
+                <RenderableContentControl Context="Inspector" Presentation="Status" />
             }
             else
             {
