--- a/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
@@ -99,6 +99,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoCognexVisionDatamanExample
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="AxoCognexVisionInsightExample">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoCognexVisionInsightExample
+            </NavLink>
+        </div>
     </nav>
 </div>
 
