--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoDataInspector/AxoDataInspectorStatusView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/AxoDataInspector/AxoDataInspectorStatusView.razor
@@ -29,6 +29,13 @@
             <div class="col-auto">
                 <GenericIconView Result="@Component._data.Result.Cyclic" />
             </div>
+            <div>
+
+                @if (Component._axoInspectorDialog._isOverInspected.Cyclic)
+                {
+                    <p class="text-danger">No more inspections are allowed, because data will be overinspected!</p>
+                }
+            </div>
         </div>
         <div id="@ID" class="accordion-collapse collapse">
             <div class="accordion-body py-1">
