--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/GenericInspectorDataView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/GenericInspectorDataView.razor
@@ -5,11 +5,12 @@
 <div class="row">
     <div class="col-md me-2">
         <RenderableContentControl Context="@Data.Result" Presentation="@Presentation" />
-        <RenderableContentControl Context="@Data.ErrorCode" Presentation="@Presentation" />
-        <RenderableContentControl Context="@Data.FailureDescription" Presentation="@Presentation" />
+        <RenderableContentControl Context="@Data.Timestamp" Presentation="@Presentation" />
+@*         <RenderableContentControl Context="@Data.ErrorCode" Presentation="@Presentation" />
+        <RenderableContentControl Context="@Data.FailureDescription" Presentation="@Presentation" /> *@
     </div>
     <div class="col-md mx-2">
-        <RenderableContentControl Context="@Data.Timestamp" Presentation="@Presentation" />
+     
         <RenderableContentControl Context="@Data.FailTime" Presentation="@Presentation" />
         <RenderableContentControl Context="@Data.PassTime" Presentation="@Presentation" />
     </div>
