--- a/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ProcessData.razor
@@ -1,6 +1,8 @@
 ﻿@page "/ui/ProcessData"
+@using AXOpen.Base.Dialogs;
 @using AXSharp.Connector
 @using AXOpen.Data;
+@inject IAlertDialogService _alertDialogService;
 
 
 @*<div class="container-fluid">
@@ -14,18 +16,18 @@
 *@
 @code
 {
-    //private DataExchangeViewModel _vm;
+    private DataExchangeViewModel _vm;
 
-    //protected override void OnInitialized()
-    //{
-    //    _vm = new DataExchangeViewModel { Model = Entry.Plc.Context.PneumaticManipulator.ProcessData, AlertDialogService = _alertDialogService };
-    //}
+    protected override void OnInitialized()
+    {
+        _vm = new DataExchangeViewModel { Model = Entry.Plc.Context.PneumaticManipulator.ProcessData, AlertDialogService = _alertDialogService };
+    }
 }
 
 
-<RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData" Presentation="Command"></RenderableContentControl>
+@*<RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData" Presentation="Command"></RenderableContentControl>*@
 
-@*<DataExchangeView Vm="@_vm" Presentation="Command" CanExport="true"></DataExchangeView>*@
+<DataExchangeView Vm="@_vm" Presentation="Command" CanExport="true"></DataExchangeView>
 
 @*<RenderableContentControl Context="@Entry.Plc.Context.PneumaticManipulator.ProcessData.Shared" Presentation="Command"></RenderableContentControl>
 
