added inspector view template and shadow views

--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/GenericIconView.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/GenericIconView.razor
@@ -1,6 +1,6 @@
 ﻿@namespace AXOpen.Inspectors
 
-    <div class="d-flex justify-content-center mt-2">
+    <div class="d-flex justify-content-center  ">
         @switch (@Result)
         {
             case 0:
