--- a/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/Shared/MainLayout.razor
+++ b/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>librarytemplateapp.blazor</PageTitle>
+<PageTitle>librarytemplate.blazor</PageTitle>
 
 <div class="page">
     <div class="sidebar">
