added data resx

--- a/src/data/src/AXOpen.Data.Blazor/_Imports.razor
+++ b/src/data/src/AXOpen.Data.Blazor/_Imports.razor
@@ -1,5 +1,9 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using AXOpen.Data.Blazor.Properties;
+@using Microsoft.AspNetCore.Components.Web
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using CommunityToolkit.Mvvm.ComponentModel;
 @using AXOpen.Data;
 @using AXOpen.Base.Dialogs;
+@using Microsoft.Extensions.Localization;
+
+@inject IStringLocalizer<AxOpenDataResources> Localizer
