--- a/src/inspectors/src/AxOpen.Inspectors.Blazor/InspectorViewTemplate.razor
+++ b/src/inspectors/src/AxOpen.Inspectors.Blazor/InspectorViewTemplate.razor
@@ -70,7 +70,7 @@
 
         <div id="@ID" class="accordion-collapse collapse">
             <div class="accordion-body py-1">
-                <GenericInspectorDataView Data="@Data" Presentation="Display" />
+                <GenericInspectorDataView Data="@Data" Presentation="@Presentation" />
             </div>
         </div>
     </div>
