additions to prev + docu

--- a/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
@@ -38,7 +38,7 @@
                     break;
                 case eAlarmLevel.ActiveErrors:
                     <button class="btn btn-danger" type="button" @onclick="ToggleAlarmsDetails">
-                        <i class="bi bi-emoji-frown-fill bg-danger" aria-hidden="true"></i>
+                        <i class="bi bi-emoji-angry-fill bg-danger" aria-hidden="true"></i>
                     </button>
                     break;
                 default:
