--- a/src/components.elements/app/ix-blazor/ElementsComponents.blazor/Pages/_Host.cshtml
+++ b/src/components.elements/app/ix-blazor/ElementsComponents.blazor/Pages/_Host.cshtml
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="elementscomponents.blazor.styles.css" rel="stylesheet" />
+
+    <!-- Option 1: Include in HTML -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
