Result data async read on demand

--- a/src/components.cognex.vision/src/AXOpen.Cognex.Vision.Blazor/AxoByteArray255/AxoByteArray255View.razor
+++ b/src/components.cognex.vision/src/AXOpen.Cognex.Vision.Blazor/AxoByteArray255/AxoByteArray255View.razor
@@ -14,14 +14,13 @@
         {
             <div class="col">
                 <div>
-                    @item.Index
+                    @item?.Index
                 </div>
                 <div>
-                    @item.Data
+                    @item?.Data
                 </div>
             </div>
         }
-
     }
 </div>
 
