--- a/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
@@ -38,7 +38,7 @@
                     break;
                 case eAlarmLevel.ActiveErrors:
                     <button class="btn btn-danger" type="button" @onclick="ToggleAlarmsDetails">
-                        <i class="bi bi-emoji-angry-fill bg-danger" aria-hidden="true"></i>
+                        <i class="bi bi-emoji-dizzy-fill bg-danger" aria-hidden="true"></i>
                     </button>
                     break;
                 default:
@@ -99,5 +99,9 @@
                 </div>
             }
         }
+    }
+    else
+    {
+        areAlarmsCollapsed = true;
     }
 </div>
