AxoByteArray in Results and UserData changed

--- a/src/components.cognex.vision/src/AXOpen.Cognex.Vision.Blazor/AxoByteArray255/AxoByteArray255View.razor
+++ b/src/components.cognex.vision/src/AXOpen.Cognex.Vision.Blazor/AxoByteArray255/AxoByteArray255View.razor
@@ -1,4 +1,4 @@
-﻿@namespace AXOpen.Cognex.Vision.v_6_0_0_0
+﻿@* @namespace AXOpen.Cognex.Vision.v_6_0_0_0
 @using AXSharp.Connector.ValueTypes
 @using AXSharp.Connector;
 @using AXSharp.Presentation.Blazor.Controls.Layouts.TabControlComponents;
@@ -24,3 +24,4 @@
     }
 </div>
 
+ *@
