--- a/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
@@ -104,6 +104,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> AxoCognexVisionInsightExample
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="AxoByteArrayExample">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoByteArrayExample
+            </NavLink>
+        </div>
     </nav>
 </div>
 
