--- a/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Shared/NavMenu.razor
@@ -105,8 +105,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="AxoByteArrayExample">
-                <span class="oi oi-plus" aria-hidden="true"></span> AxoByteArrayExample
+            <NavLink class="nav-link" href="AxoArraysExamples">
+                <span class="oi oi-plus" aria-hidden="true"></span> AxoArraysExamples
             </NavLink>
         </div>
     </nav>
