No dynamic, no try-catch. Tests, docs and some changes.

--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
@@ -278,7 +278,7 @@ else
                         <div class="alert alert-danger d-flex align-items-center m-0 p-2" role="alert">
                             <span class="oi oi-warning" aria-hidden="true" b-p1s6lcmqsx=""></span>
                             <div>
-                                This repository is been modified from outside!
+                                This record has external modifications!
                             </div>
                         </div>
                     }
@@ -409,7 +409,7 @@ else
                         <div class="alert alert-danger d-flex align-items-center m-0 p-2" role="alert">
                             <span class="oi oi-warning" aria-hidden="true" b-p1s6lcmqsx=""></span>
                             <div>
-                                This repository is been modified from outside!
+                                This record has external modifications!
                             </div>
                         </div>
                     }
@@ -442,7 +442,7 @@ else
                         <div class="alert alert-danger d-flex align-items-center m-0 p-2" role="alert">
                             <span class="oi oi-warning" aria-hidden="true" b-p1s6lcmqsx=""></span>
                             <div>
-                                This repository is been modified from outside!
+                                This record has external modifications!
                             </div>
                         </div>
                     }
